fixed js files, fixed menu being non visible on mobile

--- a/style.css
+++ b/style.css
@@ -405,47 +405,55 @@ nav a:hover {
     margin-bottom: 75px;
   }
     #tapPrompt {
-        display: none; /* Hide tap prompt on mobile */
-      }
-        nav {
-          display: none;
-          top: 150px;
-          left: 390px;
-          background: rgba(255, 255, 255, 0.2);
-          padding: 20px;
-          border-radius: 12px;
-          flex-direction: column;
-          gap: 10px;
-          z-index: 999;
-        }
-      
-        nav.open {
-          display: flex;
-        }
-      
-        nav a {
-          display: block;
-          font-size: 18px;
-          color: white;
-          text-align: right;
-          text-decoration: none;
-          padding: 6px 0;
-        }
-      #hamburgerBtn {
-        position: fixed;
-        top: 20px;
-        left: 400px;
-        z-index: 1000;
-        display: flex;
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(6px);
-        border: none;
-        border-radius: 10px;
-        padding: 10px 16px;
-        font-size: 18px;
-        font-weight: bold;
-        color: white;
-        cursor: pointer;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      }
-      }
+      display: none; /* Hide tap prompt on mobile */
+    }
+
+    #hamburgerBtn {
+      display: none;
+    }
+
+    nav {
+      display: none;
+      top: 175px;
+      left: 350px;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.2);
+      padding: 20px;
+      border-radius: 12px;
+      flex-direction: column;
+      gap: 10px;
+      z-index: 999;
+    }
+
+    nav.open {
+      display: flex;
+    }
+
+    nav a {
+      display: block;
+      font-size: 18px;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      padding: 6px 0;
+    }
+
+    #hamburgerBtn {
+      position: fixed;
+      top: 50px;
+      right: 10%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(6px);
+      border: none;
+      border-radius: 10px;
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      color: white;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      text-shadow: 2px 2px 2px rgb(0, 42, 2);
+     }}
